Code Refactor - Path Refactor - Workspace Refactor - parseInteger Refactor (Workspace, SnapshotHelper) - parseInt Methode in NumberUtils eingefügt