@@ -34,37 +34,37 @@ public class PropertiesSorter {
      * Liest alle {@code .properties-Dateien} aus dem Ressourcenordner, sortiert sie und überschreibt sie bei Zustimmung.
      */
     public static void main(String[] args) throws IOException {
-        Path[] propertiesFiles = getPropertiesPaths();
+        Path[] propertiesPaths = getPropertiesPaths();
 
-        for (Path file : propertiesFiles) {
-            System.out.printf("Reading file '%s'%n", file);
+        for (Path propertyPath : propertiesPaths) {
+            System.out.printf("Reading file '%s'%n", propertyPath.toAbsolutePath());
 
             // Charset ermitteln
-            Charset charset = CharsetDetector.detectCharset(file);
+            Charset charset = CharsetDetector.detectCharset(propertyPath);
             System.out.println("Detected charset: " + charset.displayName());
 
-            List<String> originalLines = readAllLines(file, charset);
+            List<String> originalLines = readAllLines(propertyPath, charset);
             List<String> sortedLines = sortProperties(originalLines);
 
             // Entfernt Leerzeilen am Anfang und Ende
-            trimEmptyEdges(sortedLines);
+            trimList(sortedLines);
 
             // Wenn Datei bereits sortiert → überspringen
             if (Objects.equals(originalLines, sortedLines)) {
-                System.out.printf("⏭️ File ‘%s’ is already sorted.%n%n", file);
+                System.out.printf("⏭️ File ‘%s’ is already sorted.%n%n", propertyPath);
                 continue;
             }
 
             // Nutzer fragen, ob die Datei überschrieben werden soll
             String question = "⚠️ Should the file be overwritten?";
             if (!askUserForConfirmation(question)) {
-                System.out.printf("❌ File ‘%s’ is skipped.%n%n", file);
+                System.out.printf("❌ File ‘%s’ is skipped.%n%n", propertyPath);
                 continue;
             }
 
             // Datei überschreiben
-            if (writeAllLines(file, sortedLines, charset)) {
-                System.out.printf("✅ File ‘%s’ has been successfully overwritten.%n%n", file);
+            if (writeAllLines(propertyPath, sortedLines, charset)) {
+                System.out.printf("✅ File ‘%s’ has been successfully overwritten.%n%n", propertyPath);
             }
         }
     }
@@ -72,16 +72,16 @@ public class PropertiesSorter {
     /**
      * Liest alle Zeilen aus einer Datei und gibt sie als Liste zurück.
      *
-     * @param file    Pfad zur Datei
-     * @param charset Zeichensatz, mit dem die Datei gelesen werden soll
+     * @param filePath Pfad zur Datei
+     * @param charset  Zeichensatz, mit dem die Datei gelesen werden soll
      * @return Liste der Zeilen; leer, wenn Datei ungültig oder ein Fehler aufgetreten ist
      */
-    private static List<String> readAllLines(Path file, Charset charset) {
+    private static List<String> readAllLines(Path filePath, Charset charset) {
         List<String> lines = new ArrayList<>();
-        if (file == null || !Files.isRegularFile(file)) return lines;
+        if (filePath == null || !Files.isRegularFile(filePath)) return lines;
 
         // Datei zeilenweise einlesen
-        try (BufferedReader reader = new BufferedReader(new FileReader(file.toFile(), charset))) {
+        try (BufferedReader reader = new BufferedReader(new FileReader(filePath.toFile(), charset))) {
             String line;
 
             // Solange noch Zeilen vorhanden sind, füge sie der Liste hinzu
@@ -89,7 +89,7 @@ public class PropertiesSorter {
                 lines.add(line);
             }
         } catch (IOException e) {
-            System.err.printf("Failed reading file '%s'%n", file);
+            System.err.printf("Failed reading file '%s'%n", filePath);
         }
         return lines;
     }
@@ -98,17 +98,17 @@ public class PropertiesSorter {
      * Schreibt alle Zeilen aus einer Liste in eine Datei. Existierende Inhalte werden vollständig überschrieben.
      * Jeder Eintrag in der Liste entspricht genau einer Zeile in der Datei.
      *
-     * @param file    Pfad zur Zieldatei
-     * @param lines   Liste der Zeilen, die geschrieben werden sollen
-     * @param charset Zeichensatz, in dem geschrieben werden soll
+     * @param filePath Pfad zur Datei
+     * @param lines    Liste der Zeilen, die geschrieben werden sollen
+     * @param charset  Zeichensatz, in dem geschrieben werden soll
      * @return {@code true}, wenn das Schreiben erfolgreich war, sonst {@code false}
      */
-    private static boolean writeAllLines(Path file, List<String> lines, Charset charset) {
-        if (file == null || lines == null || !Files.isRegularFile(file)) return false;
+    private static boolean writeAllLines(Path filePath, List<String> lines, Charset charset) {
+        if (filePath == null || lines == null || !Files.isRegularFile(filePath)) return false;
 
         // Dateiinhalt überschreiben
         try (BufferedWriter writer = new BufferedWriter(
-            new OutputStreamWriter(new FileOutputStream(file.toFile()), charset))) {
+            new OutputStreamWriter(new FileOutputStream(filePath.toFile()), charset))) {
 
             // Jede Zeile schreiben
             for (int i = 0; i < lines.size(); i++) {
@@ -121,7 +121,7 @@ public class PropertiesSorter {
             }
 
         } catch (IOException e) {
-            System.err.printf("Failed writing file '%s'%n", file);
+            System.err.printf("Failed writing file '%s'%n", filePath);
             return false;
         }
         return true;
@@ -132,24 +132,24 @@ public class PropertiesSorter {
      *
      * @param lines Liste von Strings, die bearbeitet wird
      */
-    private static void trimEmptyEdges(List<String> lines) {
+    private static void trimList(List<String> lines) {
         if (lines == null || lines.isEmpty()) return;
 
-        int start = 0;
+        int startIndex = 0;
         // Führe Zeilenindex so lange hoch, bis die erste nicht-leere Zeile gefunden ist
-        while (start < lines.size() && lines.get(start).trim().isEmpty()) {
-            start++;
+        while (startIndex < lines.size() && lines.get(startIndex).isBlank()) {
+            startIndex++;
         }
 
-        int end = lines.size() - 1;
+        int endIndex = lines.size() - 1;
         // Reduziere Index, bis die letzte nicht-leere Zeile gefunden ist
-        while (end >= start && lines.get(end).trim().isEmpty()) {
-            end--;
+        while (endIndex >= startIndex && lines.get(endIndex).isBlank()) {
+            endIndex--;
         }
 
         // Nur den Bereich mit tatsächlichem Inhalt behalten
-        if (start > 0 || end < lines.size() - 1) {
-            List<String> trimmedContent = new ArrayList<>(lines.subList(start, end + 1));
+        if (startIndex > 0 || endIndex < lines.size() - 1) {
+            List<String> trimmedContent = new ArrayList<>(lines.subList(startIndex, endIndex + 1));
             lines.clear();
             lines.addAll(trimmedContent);
         }
@@ -161,19 +161,19 @@ public class PropertiesSorter {
      * @return Array mit allen gefundenen properties-Dateien, ggf. leer
      */
     private static Path[] getPropertiesPaths() {
-        Set<Path> propertyFiles = new TreeSet<>();
+        Set<Path> propertyPaths = new TreeSet<>();
         if (!Files.isDirectory(RESOURCES_DIRECTORY)) return new Path[0];
 
         try (DirectoryStream<Path> stream = Files.newDirectoryStream(RESOURCES_DIRECTORY, PROPERTIES_FILE_NAME_PATTERN)) {
-            for (Path file : stream) {
-                if (!Files.isRegularFile(file)) continue;
-                propertyFiles.add(file);
+            for (Path filePath : stream) {
+                if (!Files.isRegularFile(filePath)) continue;
+                propertyPaths.add(filePath);
             }
         } catch (IOException e) {
             System.err.printf("Failed reading the directory '%s'%n", RESOURCES_DIRECTORY);
         }
 
-        return propertyFiles.toArray(Path[]::new);
+        return propertyPaths.toArray(Path[]::new);
     }
 
     /**
